--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Garden-Party-and-Other-Stories_1429
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Mansfield, Katherine
@@ -14,6 +17,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/631
     wikipedia: http://en.wikipedia.org/wiki/Katherine_Mansfield
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/1429#The-Garden-Party-and-Other-Stories
 gutenberg_bookshelf: New Zealand
 gutenberg_issued: '1998-08-01'
 gutenberg_type: Text
